# LiteLayer

./: .gitattributes  .gitignore  Caddyfile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: pages.yml  pip-audit.yml  tag.yml
app/: audit.py  config.py  deps.py  main.py  netutil.py  photo_ai.py  photo_inbox.py  settings_store.py  throttle.py
app/routers/: drives.py  files.py  ota.py  photos.py  programs.py
auth/: devices.py  sessions.py  store.py  twofa.py
cli/: litelayer.py
dev-ui/: index.html
dev-ui/assets/: manifest.webmanifest
dev-ui/assets/css/: app.css
dev-ui/assets/js/: app.js  appstore.js  auth.js  cmd.js  drives.js  files.js  ota.js  programs.js  settings.js  state.js  sync.js  terminal.js  theme.js  utils.js  viewers.js
docs/: api.md  cli-plan.md  networking.md  ota.md  photo-inbox.md  programs.md  security-findings.md  security.md  vpn.md
drives/: detect.py  hotplug.py  mount.py  persist.py  pinlock.py  registry.py
installer/: install.sh  litelayer-cloudflare.service  litelayer-update.service  litelayer-update.timer  litelayer.service  update.sh
site/: index.html
tests/: conftest.py  test_auth.py  test_cli.py  test_devices.py  test_mount.py  test_ota_channel.py  test_paths.py  test_photo_inbox.py  test_pinlock.py  test_programs.py  test_search.py  test_security.py  test_settings_sync.py  test_terminal_toggle.py
